# cloudflare-ddns-rs

./: CHANGELOG.md  Cargo.toml  README.md  flake.nix  module.nix  todo.md
.github/workflows/: build.yaml  ci.yml  release.yml
src/: cli.rs  config.rs  dns.rs  exit_code.rs  iface.rs  interface.rs  main.rs  notify.rs  opts.rs  utils.rs
