[package]
edition = "2021"
name = "cloudflare-ddns"
version = "0.1.0"

[dependencies]
anyhow = "1.0"

tokio.version = "1.25"
tokio.features = ["fs", "sync", "macros", "rt-multi-thread"]

itertools = "0.10"
cloudflare = "0.10.1"

nix.version = "0.26"
nix.features = ["net", "socket"]
nix.default-features = false

argh = "0.1"

serde.version = "1.0"
serde.features = ["derive"]

toml = "0.7"
parse_duration = "2.1"

systemd.version = "0.10"
systemd.optional = true
systemd.default-features = false

[features]
default = ["systemd"]
systemd = ["dep:systemd"]

[profile.dev]
opt-level = 1

[profile.release]
opt-level = 'z'
lto = true
strip = true
panic = "abort"