[package]
name = "cloudflare-ddns"
description = "Cloudflare dynamic DNS client"
version = "0.1.0"
edition = "2021"
authors = ["poscat <poscat@poscat.moe>"]

repository = "https://github.com/poscat0x04/cloudflare-ddns-rs"

readme = "README.md"
license = "BSD-3"

keywords = ["DNS", "cloudflare"]
categories = ["command-line-utilities"]

[dependencies]
cloudflare = "0.10.1"
anyhow = "1.0"
itertools = "0.10"
argh = "0.1"
toml = "0.7"

[dependencies.nix]
version = "0.26"
features = ["net", "socket"]
default-features = false

[dependencies.systemd]
version = "0.10"
optional = true
default-features = false

[dependencies.serde]
version = "1.0"
features = ["derive"]

[dependencies.tokio]
version = "1.25"
features = ["fs", "sync", "macros", "rt-multi-thread"]

[features]
default = ["systemd"]
systemd = ["dep:systemd"]

[profile.dev]
opt-level = 1

[profile.release]
opt-level = 'z'
lto = true
strip = true
panic = "abort"

